2001-10-13  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.c (at_splines_new): Invoke despeckle.

	* autotrace.h (struct _at_fitting_opts_type): 
	New members, despeckle_level and despeckle_tightness.

	* fit.c (new_fitting_opts): Initialize
	despeckle_level and despeckle_tightness.

	* main.c (read_command_line): Use 
	fitting_opts->despeckle_tightness and
	fitting_opts->despeckle_level.

2001-10-11  Martin Weber  <martweb@gmx.net>

        * main.c, despeckle.c, despeckle.h: Added new despeckling code.

2001-10-12  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am: Added despeckle.[ch].

2001-10-12  David A. Bartold <???@???.???>

	 by Masatake)
	* despeckle.[ch]: New files.

2001-10-03 Jerritt Collord <collord@collord.net>

	* output-sk.c (out_splines): Check `at_centerline'
	before doing fputs("bC()\n", file).

	(Logged by Masatake)
	
o2001-09-18  Martin Weber  <martweb@gmx.net>

	* output-eps.c: fixed a small bug in the initialisation of last_color
	Suggested by "Wolfgang Glunz" <wolfgang.glunz@icn.siemens.de>.

	* output-p2e.c: fixed a small bug in the initialisation of last_color,
	adopted to pstoedit 3.30
	Suggested by "Wolfgang Glunz" <wolfgang.glunz@icn.siemens.de>.

2001-09-15  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.c (at_home_site): Update the homepage of 
	autotrace.

	* README: Likewise.

2001-04-13  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Warn if libping is not found.

2001-04-12  Martin Weber <martweb@gmx.net>

	Message-ID: <3AD446C7.9045830B@gmx.net>

	* input-tga.c: I fixed a bug in input-tga.c:
	Indexed tga images are now interpreted correctly.

2001-04-11  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Don't check malloc.h.

	* output-er.c: Don't include malloc.h.

	* output-p2e.c: Likewise.

2001-04-11  Masatake YAMATO  <yamato@redhat.com>

	* output-er.c: Include malloc.h if HAVE_MALLOC_H is
	defined.

	* output-p2e.c: Likewise.

	* configure.in: Check malloc.h.
	These changes are suggested by 